<resources>
    <string name="app_name">MentalCareApp</string>

    <!-- Clase main -->
    <string name="main_bienvenido">BIENVENIDO A</string>
    <string name="main_titulo">MENTALCARE</string>
    <string name="main_tituloMin">MentalCare</string>
    <string name="main_logintext">INICIAR SESION</string>
    <string name="main_mailbox">Correo Electronico</string>
    <string name="main_passwordbox">Contraseña</string>
    <string name="main_registerbutton">¿Aun no tienes una cuenta?</string>

    <string name="menu_volver">Volver</string>


    <!-- bottom navigation main -->
    <string name="Navigation_home">Inicio</string>
    <string name="Navigation_chat">Mensajes</string>
    <string name="Navigation_calendar">Citas</string>
    <string name="Navigation_Cuenta">Mi  Cuenta</string>

    <!-- Menu principal -->
    <string name="Menu_title">MENU PRINCIPAL</string>
    <string name="Chat_title">MENSAJES</string>
    <string name="Calendar_title">PROXIMAS CITAS</string>
    <string name="Perfil_title">TU PERFIL</string>

    <!-- Registro  -->
    <string name="Register_presentacion">Unete a MentalCare y da el siguiente paso</string>
    <string name="Register_usuario">Usuario</string>
    <string name="Register_mail">Correo</string>
    <string name="Register_tipoUsuario">Cuenta tipo Especialista </string>
    <string name="Register_Pass">Crear contraseña</string>
    <string name="Register_ConPass">Confirmar Costraseña</string>
    <string name="Register_phone">Telefono</string>
    <string name="Register_seconphone">Tel secundario Opcional</string>
    <string name="Opcional">(Opcional)</string>
    <string name="Register_Next">CONTINUAR REGISTRO</string>
    <string name="Register_Login">Ya tengo una cuenta</string>
    <string name="Register_txtespecialista">Informacion sobre especialistas</string>
    <string name="sRegister_titulo">Termina el registro y comienza a usar MentalCare</string>
    <string name="sRegister_Name">Nombre(s)</string>
    <string name="sRegister_LastName">Primer Apellido</string>
    <string name="sRegister_sLastname">Segundo Apellido</string>
    <string name="sRegisters_age">Edad:</string>
    <string name="sRegister_sex">Sexo:</string>
    <string name="sRegister_RegisterButton">CREAR CUENTA</string>

    <!--Formulario para especialistas   -->

    <string name="Register_especializacion">Especialización</string>
    <string name="Register_trabajo">Lugar de trabajo</string>
    <string name="Register_direccion">Dirección</string>
    <string name="Register_estudios">Estudios</string>


    <!-- Fragment menu-->

    <string name="home_citastxt">Proxima Cita</string>
    <string name="home_citastxt2">Citas Programadas</string>
    <string name="citas">Citas</string>
    <string name="home_programadastxt">Programadas</string>
    <string name="recomendacionestxt">Recomendaciones de tu especialista</string>

    <string name="home_recomendaciones">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, at corporis dicta dolore dolorem enim est exercitationem explicabo nam, nihil nulla officia possimus quia repellendus similique sint veritatis? Dicta, quae?</string>

    <!-- Fragment Chat -->
    <string name="NuevosMensajestxt">Nuevos Mensajes</string>
    <string name="NombreUsuario">Nombre de usuario</string>
    <string name="Nuevo_mensaje">Nuevo Mensaje de un paciente o psicologo</string>

    <!-- Fragment Perfil -->
    <string name="NombreUsuarioPerfil">Nombre de usuario</string>
    <string name="CorreoUsuarioPerfil">CorreoUsuario@hotmail.com</string>
    <string name="TelefonoUsuarioPerfil">8113960123</string>
    <string name="TelefonoCasaUsuarioPerfil">8120197491</string>
    <string name="CerrarSesionPerfil">Cerrar Sesión</string>
    <string name="EditarPerfil">Editar</string>
    <string name="InfoProfesional">Información Profesional</string>
    <string name="textLugartrabajo">Lugar de trabajo</string>
    <string name="textEspecializacion">Especializacion</string>
    <string name="textUbicacion">Ubicación</string>
    <string name="textEstudios">Estudios</string>

</resources>