<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:background="@color/white"

    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/register_titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/register_titulo"
        app:layout_constraintVertical_bias="0.87"
        app:srcCompat="@drawable/logo"
        app:tint="@color/main_azulOscuro" />


    <TextView
        android:id="@+id/register_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:paddingTop="8dp"
        android:text="@string/main_tituloMin"
        android:textColor="@color/main_azulOscuro"
        android:textSize="30dp"
        android:textStyle="normal"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/register_bienvenido"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/sRegister_titulo"
        android:textAlignment="center"
        android:textColor="@color/main_azulOscuro"
        android:textSize="20dp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_titulo"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/sRegister_namebox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/register_bienvenido"
        android:hint="@string/sRegister_Name"
        android:inputType="text"
        android:textColorHint="@color/main_grisclaro"
        android:textColor="@color/black"
        android:layout_marginTop="35dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:textStyle="normal"
        android:textSize="20dp"
        android:backgroundTint="@color/main_grisclaro"
        />

    <EditText
        android:id="@+id/sRegister_lastnamebox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/sRegister_namebox"
        android:hint="@string/sRegister_LastName"
        android:inputType="text"
        android:textColorHint="@color/main_grisclaro"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:textStyle="normal"
        android:textSize="20dp"
        android:backgroundTint="@color/main_grisclaro"
        />

    <EditText
        android:id="@+id/sRegister_slastnamebox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/sRegister_lastnamebox"
        android:hint="@string/sRegister_sLastname"
        android:inputType="text"
        android:textColorHint="@color/main_grisclaro"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:textStyle="normal"
        android:textSize="20dp"
        android:backgroundTint="@color/main_grisclaro"
        />

    <TextView
        android:id="@+id/sRegister_agetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/sRegister_slastnamebox"
        android:hint="@string/sRegisters_age"
        android:inputType="text"
        android:textColorHint="@color/main_grisclaro"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="70dp"
        android:textStyle="normal"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"

        />

    <TextView
        android:id="@+id/sRegister_sextext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/sRegister_slastnamebox"
        android:hint="@string/sRegister_sex"
        android:inputType="text"
        android:textColorHint="@color/main_grisclaro"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="150dp"
        android:textStyle="normal"
        android:textSize="20dp"
        app:layout_constraintRight_toRightOf="parent"

        />

    <NumberPicker
        android:id="@+id/sRegister_AgeBox"
        android:theme="@style/AppTheme.Picker"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/sRegister_agetext"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="120dp"
        android:backgroundTint="@color/black"
        />

    <NumberPicker
        android:id="@+id/sRegister_sexBox"
        android:theme="@style/AppTheme.Picker"
        android:layout_width="90dp"
        android:layout_height="130dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/sRegister_agetext"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="100dp"
        android:backgroundTint="@color/black"
        />


    <Button
        android:id="@+id/sRegister_registerbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/button_style"
        android:onClick="onClick"
        android:text="@string/sRegister_RegisterButton"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sRegister_AgeBox" />

    <Button
        android:id="@+id/register_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:background="@android:color/transparent"
        android:paddingRight="30dp"
        android:onClick="onClick"
        android:text="@string/Register_Login"
        android:textAlignment="textEnd"
        android:textAllCaps="false"
        android:textColor="@color/main_grisclaro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>