<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/main_fondo_menu">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:background="@drawable/title_style"
        android:paddingTop="55dp"
        android:paddingBottom="10dp"
        android:text="@string/Perfil_title"
        android:textAlignment="center"
        android:textColor="@color/main_azulOscuro"
        android:textSize="15sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp"
        />

    <ImageView
        android:id="@+id/icon_menu"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:tint="@color/main_azulOscuro"
        tools:ignore="MissingConstraints" />

    <FrameLayout
        android:id="@+id/cajaperfil"
        android:layout_width="350dp"
        android:layout_height="415dp"
        android:background="@drawable/background_itemsmenu"
        android:justificationMode="inter_word"
        android:padding="20dp"
        android:paddingBottom="10dp"


        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints">


        <FrameLayout
            android:layout_width="308dp"
            android:layout_height="372dp">


            <TextView
                android:id="@+id/NombreUsuarioPerfil"

                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"

                android:layout_marginTop="40dp"
                android:layout_marginEnd="32dp"
                android:gravity="center"
                android:text="@string/NombreUsuarioPerfil"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"

                />


            <TextView
                android:id="@+id/CorreoUsuarioPerfil"

                android:layout_width="match_parent"

                android:layout_height="25dp"
                android:layout_marginStart="32dp"

                android:layout_marginTop="80dp"
                android:layout_marginEnd="32dp"
                android:drawableStart="@drawable/ic_mail"
                android:drawableTint="@color/black"
                android:drawablePadding="10dp"
                android:text="@string/CorreoUsuarioPerfil"
                android:textColor="@color/black"
                android:textSize="15sp"


                />

            <TextView
                android:id="@+id/TelefonoUsuarioPerfil"

                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"

                android:layout_marginTop="120dp"
                android:layout_marginEnd="32dp"

                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="16dp"
                android:drawableTint="@color/black"
                android:text="@string/TelefonoUsuarioPerfil"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="15sp"


                />

            <TextView
                android:id="@+id/TelefonoCasaUsuarioPerfil"

                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"

                android:layout_marginTop="160dp"
                android:layout_marginEnd="32dp"

                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="16dp"
                android:drawableTint="@color/black"
                android:text="@string/TelefonoCasaUsuarioPerfil"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="15sp"


                />

            <Button
                android:id="@+id/Cerrar_sesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="330dp"
                android:layout_marginEnd="100dp"
                android:background="@android:color/transparent"
                android:minHeight="48dp"
                android:onClick="onClick"
                android:text="@string/CerrarSesionPerfil"
                android:textAllCaps="false"
                android:textColor="#F44336"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/Editar_perfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginStart="100dp"
                android:layout_marginTop="350dp"
                android:background="@android:color/transparent"
                android:minHeight="48dp"
                android:onClick="onClick"
                android:text="@string/EditarPerfil"
                android:textAllCaps="false"
                android:textColor="@color/main_grisclaro"
                tools:ignore="TouchTargetSizeCheck" />


        </FrameLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="118dp"
        android:layout_height="113dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/circlewhite_background"
        android:layout_marginBottom="360dp"
        app:layout_constraintBottom_toBottomOf="@+id/cajaperfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="108dp"
            android:layout_height="95dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            app:srcCompat="@drawable/ic_usericon"
            app:tint="@color/main_grisclaro" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>